made progress on fixing icons in footer to not grow too wide

--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -362,20 +362,21 @@ header {
   }
   &__icon-container {
     display: flex;
-    justify-content: space-between;
+    margin-left: -1rem;
     width: 30vw;
     align-items: center;
     @include tablet {
-      justify-content: space-evenly;
+      margin-left: 2.5rem;
     }
     @include desktop {
-      margin-left: 2rem;
+      margin-left: 7rem;
       width: 25vw;
     }
   }
   &__icon {
     width: 1.5rem;
     height: 1.5rem;
+    margin: 0 1rem;
   }
 
   &__logo-image {
